src/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-size: 16px;
}


body {
    /* This hides the main browser scrollbars */
    overflow: hidden; 
    background-color: #222222;
}

canvas {
  display: block;
  width: 100vw;
  height: 100vh;
}

/* Modal Styling */
.modal {
    position: fixed;
    inset: 0;
    background: rgba(0, 0, 0, 0.3);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
}

.hidden { 
    display: none; 
    opacity: 0;
    pointer-events: none;
}

/* UI */

.appInterface {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none; /* Essential: Allows clicking the 3D scene through the div */
    color: #333;
    font-family: 'Inter', sans-serif;
}

.ctrlBtn, .content {
    pointer-events: auto; /* Re-enables clicking for buttons and modal */
}

.navControls {
    position: absolute;
    bottom: 5%;
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.container {
    display: flex;
    flex: 1 1 0;
    justify-content: space-between;
    align-items: center;
    gap: 5rem;
    background-color: #fcfcfc;
    padding: 1rem;
    margin: 0 20vw;
    border-radius: 8px;
}

.ctrlBtn {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    font-size: 1rem;
    border-radius: 8px;
    border: none;
    backdrop-filter: blur(10px);
    padding: 0.5rem;
    cursor: pointer;
    transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
    font-weight: 500;
    letter-spacing: 1px;
}

.ctrlBtn:hover {
    background: rgba(255, 255, 255, 0.5);
    transform: scale(1.05);
}

.topBar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 2rem;
}

.bold {
    font-weight: 800;
    font-style: normal;
    font-size: 1.25rem;
}
.logo {
    font-size: 1.25rem;
    font-weight: 600;
    font-style: italic;
}

.productTitle {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    margin-top: 3rem;
    font-weight: 400;
}

